# canaveral

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  canaveral.toml  canaveral.yaml  deny.toml  mise.toml
crates/canaveral/: Cargo.toml
crates/canaveral-adapters/: Cargo.toml
crates/canaveral-adapters/src/: credentials.rs  detector.rs  lib.rs  manifest.rs  publish.rs  registry.rs  traits.rs
crates/canaveral-adapters/src/cargo/: manifest.rs  mod.rs
crates/canaveral-adapters/src/docker/: mod.rs  parser.rs  registry.rs
crates/canaveral-adapters/src/go/: gomod.rs  mod.rs
crates/canaveral-adapters/src/maven/: mod.rs  pom.rs
crates/canaveral-adapters/src/npm/: manifest.rs  mod.rs
crates/canaveral-adapters/src/python/: manifest.rs  mod.rs
crates/canaveral-changelog/: Cargo.toml
crates/canaveral-changelog/src/: generator.rs  lib.rs  release_notes.rs  types.rs
crates/canaveral-changelog/src/formatter/: markdown.rs  mod.rs  registry.rs
crates/canaveral-changelog/src/parser/: conventional.rs  mod.rs  registry.rs  types.rs
crates/canaveral-core/: Cargo.toml
crates/canaveral-core/src/: error.rs  lib.rs  types.rs
crates/canaveral-core/src/config/: changelog.rs  ci.rs  defaults.rs  git.rs  hooks_cfg.rs  ios.rs  loader.rs  metadata_cfg.rs  mod.rs  pr.rs  publishing.rs  release_notes.rs  root.rs  signing.rs  stores.rs  tasks.rs  tools.rs  types.rs  validation.rs  versioning.rs
crates/canaveral-core/src/hooks/: mod.rs
crates/canaveral-core/src/migration/: mod.rs  registry.rs  release_please.rs  semantic_release.rs
crates/canaveral-core/src/monorepo/: changes.rs  detector.rs  discovery.rs  graph.rs  mod.rs  publishing.rs  versioning.rs  workspace.rs
crates/canaveral-core/src/plugins/: mod.rs
crates/canaveral-core/src/templates/: github.rs  gitlab.rs  mod.rs  registry.rs
crates/canaveral-core/src/workflow/: changelog.rs  mod.rs  pr.rs  release.rs  validation.rs  version.rs
crates/canaveral-frameworks/: Cargo.toml
crates/canaveral-frameworks/src/: artifacts.rs  capabilities.rs  context.rs  detection.rs  error.rs  lib.rs  output.rs  registry.rs  simulator.rs  traits.rs  xcodebuild.rs
crates/canaveral-frameworks/src/frameworks/: astro.rs  expo.rs  flutter.rs  flutter_test.rs  mod.rs  native_android.rs  native_ios.rs  nextjs.rs  react_native.rs  tauri.rs  vite.rs
crates/canaveral-frameworks/src/orchestration/: build.rs  config.rs  mod.rs
crates/canaveral-frameworks/src/screenshots/: capture.rs  devices.rs  framing.rs  mod.rs  orchestrator.rs
crates/canaveral-frameworks/src/testing/: mod.rs  report.rs  runner.rs
crates/canaveral-git/: Cargo.toml
crates/canaveral-git/src/: commits.rs  hooks.rs  lib.rs  remote.rs  repository.rs  status.rs  tags.rs  types.rs
crates/canaveral-metadata/: Cargo.toml
crates/canaveral-metadata/src/: error.rs  lib.rs  templates.rs  utils.rs
crates/canaveral-metadata/src/storage/: fastlane.rs  mod.rs  registry.rs  unified.rs
crates/canaveral-metadata/src/sync/: apple.rs  common.rs  google_play.rs  mod.rs
crates/canaveral-metadata/src/types/: apple.rs  common.rs  google_play.rs  mod.rs
crates/canaveral-metadata/src/validation/: apple.rs  common.rs  google_play.rs  mod.rs  screenshots.rs
crates/canaveral-signing/: Cargo.toml
crates/canaveral-signing/src/: error.rs  identity.rs  lib.rs  provider.rs  registry.rs
crates/canaveral-signing/src/profiles/: manager.rs  mod.rs  parser.rs  portal.rs
crates/canaveral-signing/src/providers/: android.rs  gpg.rs  macos.rs  mod.rs  windows.rs
crates/canaveral-signing/src/sync/: mod.rs  registry.rs  storage.rs
crates/canaveral-signing/src/team/: audit.rs  encryption.rs  mod.rs  roles.rs  types.rs  vault.rs
crates/canaveral-stores/: Cargo.toml
crates/canaveral-stores/src/: error.rs  lib.rs  metadata_integration.rs  registry.rs  traits.rs  types.rs
crates/canaveral-stores/src/apple/: connect.rs  mod.rs  notarize.rs  testflight.rs
crates/canaveral-stores/src/firebase/: distribution.rs  mod.rs
crates/canaveral-stores/src/google_play/: mod.rs
crates/canaveral-stores/src/microsoft/: mod.rs
crates/canaveral-stores/src/registries/: crates_io.rs  mod.rs  npm.rs
crates/canaveral-strategies/: Cargo.toml
crates/canaveral-strategies/src/: buildnum.rs  calver.rs  lib.rs  registry.rs  semver.rs  traits.rs  types.rs
crates/canaveral-tasks/: Cargo.toml
crates/canaveral-tasks/src/: cache.rs  dag.rs  lib.rs  reporter.rs  scheduler.rs  task.rs  test_selection.rs
crates/canaveral-tools/: Cargo.toml
crates/canaveral-tools/src/: cache.rs  error.rs  lib.rs  registry.rs  traits.rs  version_match.rs
crates/canaveral-tools/src/providers/: bun.rs  flutter.rs  go.rs  java.rs  mod.rs  node.rs  python.rs  system.rs
crates/canaveral-tools/src/providers/aqua/: mod.rs  platform.rs  provider.rs  schema.rs  shortnames.toml  template.rs
crates/canaveral-tools/src/providers/generic/: mod.rs  platform.rs  provider.rs  template.rs
crates/canaveral-tools/src/tool_defs/: mod.rs  schema.rs
crates/canaveral-tools/src/tool_defs/data/: act.toml  actionlint.toml  bat.toml  biome.toml  bun.toml  cargo-nextest.toml  cargo-tauri.toml  delta.toml  deno.toml  direnv.toml  eza.toml  fd.toml  fzf.toml  gh.toml  git-cliff.toml  gradle.toml  hyperfine.toml  jq.toml  just.toml  k9s.toml  ktlint.toml  lazygit.toml  mise.toml  oxlint.toml  periphery.toml  pnpm.toml  ripgrep.toml  shellcheck.toml  starship.toml  swiftformat.toml  swiftlint.toml  tailwindcss.toml  taplo.toml  tuist.toml  typos.toml  watchman.toml  xcbeautify.toml  xcodegen.toml  xh.toml  yarn.toml  (+1 more)
crates/canaveral-tools/tests/: tool_registry.rs
crates/canaveral/src/: cnvl.rs  exit_codes.rs  lib.rs  main.rs
crates/canaveral/src/cli/: mod.rs
crates/canaveral/src/cli/commands/: archive.rs  build.rs  cache.rs  changelog.rs  check.rs  ci.rs  completions.rs  doctor.rs  firebase.rs  fmt.rs  hooks.rs  init.rs  lint.rs  match_cmd.rs  metadata.rs  mod.rs  pr.rs  publish.rs  release.rs  (+12 more)
crates/canaveral/src/scaffold/: context.rs  errors.rs  generator.rs  mod.rs  presets.rs  project_detector.rs  registry.rs  templates.rs
(+138 files in other folders)
