[workspace]
resolver = "2"
members = [
    "crates/canaveral",
    "crates/canaveral-core",
    "crates/canaveral-git",
    "crates/canaveral-changelog",
    "crates/canaveral-strategies",
    "crates/canaveral-adapters",
    "crates/canaveral-signing",
    "crates/canaveral-stores",
    "crates/canaveral-metadata",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/canaveral"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
canaveral-core = { path = "crates/canaveral-core" }
canaveral-git = { path = "crates/canaveral-git" }
canaveral-changelog = { path = "crates/canaveral-changelog" }
canaveral-strategies = { path = "crates/canaveral-strategies" }
canaveral-adapters = { path = "crates/canaveral-adapters" }
canaveral-signing = { path = "crates/canaveral-signing" }
canaveral-stores = { path = "crates/canaveral-stores" }
canaveral-metadata = { path = "crates/canaveral-metadata" }

# CLI
clap = { version = "4", features = ["derive", "env"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
toml_edit = "0.22"

# Git
git2 = "0.18"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Versioning
semver = "1"
chrono = { version = "0.4", features = ["serde"] }

# Utilities
regex = "1"
glob = "0.3"
globset = "0.4"
walkdir = "2"
tempfile = "3"
url = "2"
dirs = "5"

[profile.release]
lto = true
codegen-units = 1
strip = true
