[package]
name = "canaveral-adapters"
description = "Package adapters for Canaveral release management"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
canaveral-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
semver = { workspace = true }
tokio = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
