[package]
name = "canaveral-core"
description = "Core library for Canaveral release management"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
semver = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
globset = { workspace = true }
walkdir = { workspace = true }
git2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
