[package]
name = "canaveral-frameworks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Framework-agnostic build, test, and release adapters for Canaveral"

[dependencies]
canaveral-core = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Async
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Async traits
async-trait = "0.1"

# Utilities
semver = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
which = "6"
sha2 = "0.10"
shellexpand = "3"
plist = "1"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
