[package]
name = "canaveral-metadata"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "App store metadata management for Canaveral"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async
async-trait = "0.1"
tokio = { workspace = true, features = ["fs"] }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
