[package]
name = "canaveral-metadata"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "App store metadata management for Canaveral"

[features]
default = []
sync = ["reqwest", "jsonwebtoken", "chrono"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async
async-trait = "0.1"
tokio = { workspace = true, features = ["fs"] }

# Logging
tracing = { workspace = true }

# Image dimension reading
image = "0.25"

# Sync dependencies (optional, enabled with "sync" feature)
reqwest = { version = "0.12", features = ["json"], optional = true }
jsonwebtoken = { version = "10", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
