[package]
name = "canaveral-tools"
description = "Tool version detection, installation, and activation for Canaveral"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
canaveral-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
which = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
