[package]
name = "canaveral-tools"
description = "Tool version detection, installation, and activation for Canaveral"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
canaveral-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
which = { workspace = true }
dirs = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_yaml = { workspace = true }
flate2 = "1"
tar = "0.4"
zip = "2"
sha2 = { workspace = true }
semver = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
