[package]
name = "canaveral"
description = "Universal release management CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
default-run = "canaveral"

[[bin]]
name = "canaveral"
path = "src/main.rs"

[[bin]]
name = "cnvl"
path = "src/cnvl.rs"

[features]
default = ["metadata-integration"]
# Enable metadata validation integration in store upload commands
metadata-integration = ["canaveral-stores/metadata"]

[dependencies]
canaveral-core = { workspace = true }
canaveral-git = { workspace = true }
canaveral-changelog = { workspace = true }
canaveral-strategies = { workspace = true }
canaveral-adapters = { workspace = true }
canaveral-signing = { workspace = true }
canaveral-stores = { workspace = true }
canaveral-metadata = { workspace = true, features = ["sync"] }
canaveral-frameworks = { workspace = true }
canaveral-tasks = { workspace = true }

clap = { workspace = true }
clap_complete = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tokio = { workspace = true }
which = { workspace = true }
semver = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
